--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1" />
     <title>Inicio de sesión</title>
     <link rel="stylesheet" href="css/themes/default/jquery.mobile-1.4.5.min.css" />
-    <link rel="stylesheet" href="_assets/css/jqm-demos.css">
-    <link rel="stylesheet" href="_assets/css/jqm-datebox-1.4.5.min.css" />
+    <link rel="stylesheet" href="assets/css/jqm-demos.css">
+    <link rel="stylesheet" href="assets/css/jqm-datebox-1.4.5.min.css" />
     <link rel="stylesheet" href="css/themes/stylesCf.css" />
     <link rel="manifest" href="manifest.json">
     <script src="js/jquery.min.js"></script>
-    <script src="_assets/js/index.js"></script>
+    <script src="assets/js/index.js"></script>
     <!--<script type="text/javascript" src="cordova.js"></script>-->
     <script src="js/jquery.mobile-1.4.5.min.js"></script>
     <script type="text/javascript" src="js/datebox/jqm-datebox-1.4.5.core.min.js"></script>
@@ -27,7 +27,7 @@
 
 <div data-role="page" id="index" class="jqm-demos">
 	<div data-role="header" class="jqm-header">
-        <h2><a href="index.html" title="Control de Agencias"><img src="_assets/img/cda-logo.png" alt="Control de Agencias"></a></h2>
+        <h2><a href="index.html" title="Control de Agencias"><img src="assets/img/cda-logo.png" alt="Control de Agencias"></a></h2>
     </div>
     
 	<div data-role="content">
