--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/themes/default/jquery.mobile-1.4.5.min.css" />
     <link rel="stylesheet" href="assets/css/jqm-demos.css">
     <link rel="stylesheet" href="assets/css/jqm-datebox-1.4.5.min.css" />
-    <link rel="stylesheet" href="css/themes/stylesCf.css" />
+    <link rel="stylesheet" href="css/themes/stylescf.css" />
     <link rel="manifest" href="manifest.json">
     <script src="js/jquery.min.js"></script>
     <script src="assets/js/index.js"></script>
